--- a/src/styles/components/home/Home.css
+++ b/src/styles/components/home/Home.css
@@ -35,7 +35,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('../../../assets/software.avif');
+    background-image: url('../../../assets/images/software.avif');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
