--- a/src/styles/components/navbar/Navbar.css
+++ b/src/styles/components/navbar/Navbar.css
@@ -1,5 +1,6 @@
 .bg-dark {
-    background-color: transparent !important; 
+    background-color: rgba(0, 0, 0, 0.8) !important;
+    transition: background-color 0.3s ease-in-out;
 }
 
 .bg-transparent {
