--- a/src/styles/components/skills/Skills.css
+++ b/src/styles/components/skills/Skills.css
@@ -1,7 +1,7 @@
 .skills-title {
     text-align: center;
     padding: 30px;
-    color: #00d8ff;
+    color: #bb86fc;;
     font-size: 24px;
 }
 
@@ -47,7 +47,7 @@
 
 .skill-icon {
     font-size: 40px;
-    color: #00d8ff;
+    color: #bb86fc;;
     margin-bottom: 10px;
 }
 
@@ -69,7 +69,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.8);
-    color: #00d8ff;
+    color: #bb86fc;;
     display: flex;
     align-items: center;
     justify-content: center;
