--- a/src/styles/components/navbar/Navbar.css
+++ b/src/styles/components/navbar/Navbar.css
@@ -1,20 +1,3 @@
-.bg-dark {
-    background-color: rgba(0, 0, 0, 0.8) !important;
-    transition: background-color 0.3s ease-in-out;
-}
-
-.bg-transparent {
-    background-color: transparent !important;  
-}
-
-.navbar.navbar-dark.bg-transparent .nav-item.nav-link {
-    color: white !important;
-}
-
-.navbar.navbar-dark.bg-transparent .nav-item.nav-link.disabled {
-    color: rgba(255, 255, 255, 0.5) !important;
-}
-
 .nav-item.nav-link.active::after {
     content: "";
     position: absolute;
@@ -29,4 +12,43 @@
 .nav-item.nav-link {
     position: relative;
     padding-bottom: 8px;
+}
+
+/* Estilização do dropdown */
+.nav-item.dropdown {
+    position: relative;
+}
+
+.nav-link.dropdown-toggle {
+    cursor: pointer;
+}
+
+.dropdown-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background: rgba(0, 0, 0, 0.8);
+    border-radius: 5px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.dropdown-menu.show {
+    display: block;
+}
+
+.dropdown-item {
+    padding: 10px 15px;
+    color: white;
+    background: transparent;
+    border: none;
+    text-align: left;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+
+.dropdown-item:hover {
+    background: rgba(255, 255, 255, 0.2);
 }
