Fix bug typewriter

--- a/src/styles/components/contact/Contact.css
+++ b/src/styles/components/contact/Contact.css
@@ -52,6 +52,10 @@
   .btn-outline-light:hover i {
     transform: scale(1.2);
   }
+
+  .submitToast {
+    color: black;
+  }
   
   @media (max-width: 768px) {
     .contact-section {
